kubernetes-manifests/questboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questboard
spec:
  replicas: 3
  selector:
    matchLabels:
      run: questboard
  template:
    metadata:
      labels:
        run: questboard
        name: questboard
    spec:
      containers:
      - image: docker.io/caelebc/qb_cloudrun_iscs
        name: questboard
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
            - name: data-questboard
              mountPath: /code/data
        command: ["/bin/sh", "-c", "python ../manage.py migrate; python ../manage.py runserver 0.0.0.0:8080"]
      volumes:
        - name: data-questboard
          persistentVolumeClaim:
              claimName: pvc-questboard
---
  apiVersion: v1
  kind: Service
  metadata:
    name: service-questboard
  spec:
    type: NodePort
    selector:
      name: questboard
    ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30100
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress-questboard
    annotations:
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
  spec:
    rules:
      - http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-questboard
                port:
                  number: 80
